# ventilation_sim

./: CMakeLists.txt  LICENSE  benchmarks.cpp  main.cpp  main.hpp  own_imgui.cpp  own_imgui.hpp  readme.md  setup.bat  simulation.cpp  simulation.hpp  step-2.bat  tests.cpp
.github/workflows/: main.yml
scripts/: step-1.bat  step-2.bat  step-3.bat
